short-app/kube-config/01-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: short-app-frontend
  template:
    metadata:
      labels:
        components: short-app-frontend
    spec:
      containers:
      - name: short-app
        image: antonlarichev/short-app:v1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
