short-app/kube-config/05-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: short-app-db
  template:
    metadata:
      labels:
        components: short-app-db
    spec:
      containers:
        - name: short-app-db
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              subPath: "postgress"
              name: short-app-db-data
      volumes:
        - name: short-app-db-data
          persistentVolumeClaim:
            claimName: short-app-db-pvc
