short-app/kube-config/08-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: short-app-api
  template:
    metadata:
      labels:
        components: short-app-api
    spec:
      containers:
      - name: short-app-api
        image: antonlarichev/short-api:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
      restartPolicy: Always
