short-app/kube-config/02-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    components: short-app-frontend
