short-app/kube-config/06-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-db-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    components: short-app-db
