short-app/kube-config/10-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-api-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    components: short-app-api
