short-app/kube-config/pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-port
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31200
  selector:
    components: short-app-frontend
