short-app/kube-config/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "myapp.test"
      http:
        paths:
          - path: "/short-app"
            pathType: Prefix
            backend:
              service:
                name: short-app-clusterip
                port:
                  number: 80
